Fixed balloons not being removed in wardrobe